se realiza cambio de 14 de los  15 cambios

--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -89,7 +89,8 @@
         android:text="@string/legal"
         android:textColor="@color/colorBlack"
         android:textSize="18sp"
-        android:textStyle="normal" />
+        android:textStyle="normal"
+        android:onClick="LegalInfo"/>
     <!--  <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
