--- a/app/src/main/res/layout/fragment_foundation.xml
+++ b/app/src/main/res/layout/fragment_foundation.xml
@@ -57,7 +57,8 @@
                 tools:listitem="@layout/foundation_list_item"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
-                android:layout_alignParentTop="true" />
+                android:layout_alignParentTop="true"
+                />
             </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
 
