--- a/app/src/main/res/layout/activity_my_product_list.xml
+++ b/app/src/main/res/layout/activity_my_product_list.xml
@@ -11,6 +11,13 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
+        <androidx.cardview.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/card_view"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            card_view:cardCornerRadius="4dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -49,6 +56,14 @@
 
 
         </LinearLayout>
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/card_view1"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            card_view:cardCornerRadius="4dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -76,85 +91,117 @@
                 android:inputType="text"
                 android:textColor="@color/colorBlack" />
         </LinearLayout>
-
-        <LinearLayout
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/card_view2"
+            android:layout_gravity="center"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:background="@drawable/search_background"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-
-            <TextView
-                android:id="@+id/cetId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="12dp"
-                android:layout_weight="1"
-                android:text="@string/browse_by_product"
-                android:textColor="@color/colorBlack"
-                android:textSize="16sp" />
-
-
-            <ImageView
-                android:id="@+id/product_refresh"
-                android:layout_width="32dp"
-                android:layout_height="32dp"
-                android:layout_margin="5dp"
-                android:adjustViewBounds="true"
-                android:scaleType="fitCenter"
-                android:src="@drawable/ic_sort" />
-
-
-        </LinearLayout>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="12dp"
-            android:layout_marginTop="12dp"
-            android:gravity="center"
-            android:text="Category"
-            android:textColor="@color/colorBlack"
-            android:textSize="14sp"
-            android:textStyle="bold" />
+            card_view:cardCornerRadius="4dp">
 
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="12dp"
-            android:gravity="center"
-            android:orientation="horizontal">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="12dp"
+        android:background="@drawable/search_background"
+        android:gravity="center"
+        android:orientation="horizontal">
 
-            <androidx.cardview.widget.CardView
-                android:layout_width="30dp"
-                android:layout_height="30dp"
-                app:cardBackgroundColor="#f4f4f4"
-                app:cardCornerRadius="15dp">
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="fill_parent"
+            android:layout_height="50dp"
+            android:spinnerMode="dropdown"
+            android:visibility="visible" />
+    </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
-                <ImageView
-                    android:id="@+id/cat_ImgId"
-                    android:layout_width="20dp"
+    <!--
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/basketball" />
-            </androidx.cardview.widget.CardView>
-
-            <TextView
-                android:id="@+id/cat_TxtId"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="@string/sport"
-                android:textColor="@color/colorBlack"
-                android:textSize="12sp"
-                android:textStyle="bold" />
-        </LinearLayout>
+                    android:layout_margin="12dp"
+                    android:background="@drawable/search_background"
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
 
+                    <TextView
+                        android:id="@+id/cetId"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="12dp"
+                        android:layout_weight="1"
+                        android:text="@string/browse_by_product"
+                        android:textColor="@color/colorBlack"
+                        android:textSize="16sp" />
 
+
+                    <ImageView
+                        android:id="@+id/product_refresh"
+                        android:layout_width="32dp"
+                        android:layout_height="32dp"
+                        android:layout_margin="5dp"
+                        android:adjustViewBounds="true"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/ic_sort" />
+
+
+                </LinearLayout>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="12dp"
+                            android:layout_marginTop="12dp"
+                            android:gravity="center"
+                            android:text="Category"
+                            android:textColor="@color/colorBlack"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
+
+                                <LinearLayout
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="24dp"
+                                    android:layout_margin="12dp"
+                                    android:gravity="center"
+                                    android:orientation="horizontal">
+
+                                    <androidx.cardview.widget.CardView
+                                        android:layout_width="30dp"
+                                        android:layout_height="30dp"
+                                        app:cardBackgroundColor="#f4f4f4"
+                                        app:cardCornerRadius="15dp">
+
+                                        <ImageView
+                                            android:id="@+id/cat_ImgId"
+                                            android:layout_width="20dp"
+                                            android:layout_height="wrap_content"
+                                            android:layout_margin="5dp"
+                                            android:adjustViewBounds="true"
+                                            android:scaleType="fitCenter"
+                                            android:src="@drawable/basketball" />
+                                    </androidx.cardview.widget.CardView>
+
+                                    <TextView
+                                        android:id="@+id/cat_TxtId"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content"
+                                        android:gravity="center"
+                                        android:text="@string/sport"
+                                        android:textColor="@color/colorBlack"
+                                        android:textSize="12sp"
+                                        android:textStyle="bold" />
+                                </LinearLayout>-->
+
+        <androidx.cardview.widget.CardView
+            xmlns:card_view="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/card_view3"
+            android:layout_gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            card_view:cardCornerRadius="4dp">
 
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/recycleViewProductList"
@@ -163,22 +210,20 @@
                     android:layout_gravity="center"
                     android:layout_margin="15dp" />
 
+        </androidx.cardview.widget.CardView>
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/not_DataList"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="12dp"
+                android:text="No Result"
+                android:textColor="@color/colorGray"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:visibility="gone" />
 
 
-
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/not_DataList"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_marginLeft="12dp"
-        android:text="No Result"
-        android:textColor="@color/colorGray"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:visibility="gone" />
-
-
-</RelativeLayout>
+        </RelativeLayout>
