--- a/app/src/main/res/layout/activity_product_donate.xml
+++ b/app/src/main/res/layout/activity_product_donate.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
 <LinearLayout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWhite"
@@ -75,8 +75,11 @@
                     android:id="@+id/image1"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/_200sdp"
+                    android:layout_marginStart="@dimen/_5sdp"
+                    android:layout_marginTop="@dimen/_5sdp"
+                    android:layout_marginEnd="@dimen/_5sdp"
+                    android:layout_marginBottom="@dimen/_5sdp"
                     android:adjustViewBounds="true"
-                    android:layout_margin="@dimen/_5sdp"
                     android:scaleType="fitXY"
                     android:src="@drawable/addimage"
                     app:riv_corner_radius="@dimen/_10sdp" />
