--- a/app/src/main/res/layout/alert_chat_request.xml
+++ b/app/src/main/res/layout/alert_chat_request.xml
@@ -23,17 +23,50 @@
         android:layout_margin="15dp"
         android:gravity="center"
         android:orientation="vertical">
+    <LinearLayout
+        android:id="@+id/layout_title"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:layout_marginTop="5dp"
+        android:gravity="center_vertical"
+        android:orientation="vertical"
+        android:visibility="visible">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:orientation="horizontal">
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="270dp"
             android:layout_height="wrap_content"
             android:background="@null"
             android:text="@string/chat_request"
             android:textColor="@color/colorBlack"
+            android:textAlignment="center"
             android:textColorHint="@color/colorBlack"
             android:textSize="15sp" />
 
+        <androidx.cardview.widget.CardView
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_marginLeft="5dp"
+            app:cardBackgroundColor="@color/colorGreen"
 
+            app:cardCornerRadius="@dimen/_15sdp">
+
+            <TextView
+                android:id="@+id/btn_exit"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:background="@drawable/ic_baseline_clear_24"
+                android:tint="@color/colorGray" />
+
+        </androidx.cardview.widget.CardView>
+        </LinearLayout>
+        </LinearLayout>
         <LinearLayout
             android:id="@+id/layout_status"
             android:layout_width="match_parent"
