--- a/app/src/main/res/layout/foundation_list_item.xml
+++ b/app/src/main/res/layout/foundation_list_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
@@ -27,7 +28,9 @@
                 android:layout_width="@dimen/_40sdp"
                 android:layout_height="@dimen/_40sdp"
                 android:layout_centerVertical="true"
-                android:src="@drawable/logo" />
+                android:src="@drawable/bye_hi_logo"
+                app:srcCompat="@drawable/bye_hi_logo"
+                tools:srcCompat="@drawable/bye_hi_logo" />
 
 
             <LinearLayout
@@ -108,7 +111,25 @@
 
                 </LinearLayout>
 
+                <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
+                    <TextView
+                        android:id="@+id/webpage"
+                        android:layout_width="@dimen/_30sdp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:maxLines="1"
+                        android:text="@string/webpage"
+                        android:textSize="14sp"
+                        android:autoLink="web" />
+
+
+
+
+                </LinearLayout>
                 <TextView
                     android:id="@+id/description"
                     android:layout_width="@dimen/_150sdp"
@@ -116,8 +137,6 @@
                     android:maxLines="1"
                     android:text="@string/description"
                     android:textSize="14sp" />
-
-
             </LinearLayout>
 
 
