--- a/app/src/main/res/layout/fragment_donation.xml
+++ b/app/src/main/res/layout/fragment_donation.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
@@ -37,7 +38,9 @@
             android:adjustViewBounds="true"
             android:gravity="center"
             android:scaleType="fitCenter"
-            android:src="@drawable/logo" />
+            android:src="@drawable/bye_hi_logo"
+            app:srcCompat="@drawable/bye_hi_logo"
+            tools:srcCompat="@drawable/bye_hi_logo" />
 
         <TextView
             android:layout_width="match_parent"
