--- a/app/src/main/res/layout/fragment_product_category.xml
+++ b/app/src/main/res/layout/fragment_product_category.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <RelativeLayout
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/colorWhite"
@@ -26,10 +27,11 @@
                     android:layout_height="@dimen/_15sdp"
                     android:layout_marginLeft="5dp"
                     android:adjustViewBounds="true"
-                    android:scaleType="fitCenter"
                     android:onClick="detailBack"
+                    android:scaleType="fitCenter"
                     android:src="@drawable/back"
-                    app:tint="@color/colorBlack" />
+                    app:tint="@color/colorBlack"
+                    tools:ignore="SpeakableTextPresentCheck" />
 
 
                 <TextView
@@ -142,14 +144,14 @@
                 android:adjustViewBounds="true"
                 app:riv_corner_radius="@dimen/_15sdp"
                 android:scaleType="fitCenter"
+                android:visibility="gone"
                 android:src="@drawable/image_disk" />
 
                 <com.smarteist.autoimageslider.SliderView
                     android:id="@+id/imageSlider"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/_200sdp"
+                    android:layout_height="@dimen/_260sdp"
                     android:background="@drawable/product_placeholder"
-                    android:visibility="gone"
                     app:sliderAnimationDuration="600"
                     app:sliderAutoCycleDirection="back_and_forth"
                     app:sliderAutoCycleEnabled="true"
