--- a/app/src/main/res/layout/item_chat_enquiry.xml
+++ b/app/src/main/res/layout/item_chat_enquiry.xml
@@ -88,6 +88,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/item_buttonsEnquery"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical|center_horizontal"
