--- a/app/src/main/res/layout/item_coinhistory.xml
+++ b/app/src/main/res/layout/item_coinhistory.xml
@@ -33,7 +33,8 @@
                     android:layout_height="match_parent"
                     android:layout_gravity="center_vertical">
 
-                    <com.makeramen.roundedimageview.RoundedImageView
+
+                    <ImageView
                         android:id="@+id/myDonation_imglistId"
                         android:layout_width="@dimen/_60sdp"
                         android:layout_height="match_parent"
@@ -42,6 +43,7 @@
                         android:scaleType="fitXY"
                         android:src="@drawable/coins"
                         app:riv_corner_radius="@dimen/_5sdp" />
+
 
 
                 </RelativeLayout>
