--- a/app/src/main/res/layout/item_myproduct_list_3.xml
+++ b/app/src/main/res/layout/item_myproduct_list_3.xml
@@ -33,66 +33,32 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-            <LinearLayout
+    <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-            <LinearLayout
 
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginStart="@dimen/_5sdp"
-                    android:layout_weight="1"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal">
-                <TextView
-                    android:id="@+id/product_nameId"
+
+                <RelativeLayout
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
-                    android:layout_marginRight="8dp"
-                    android:singleLine="true"
-                    android:text="@string/bicycle"
-                    android:textColor="@color/colorBlack"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
-
-            </LinearLayout>
-
-            </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-                <LinearLayout
-                    android:layout_width="fill_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_height="match_parent"
+                    android:layout_gravity="center_vertical">
 
                     <com.makeramen.roundedimageview.RoundedImageView
                         android:id="@+id/product_IconId"
-                        android:layout_marginTop="@dimen/_5sdp"
-                        android:layout_width="@dimen/_206sdp"
-                        android:layout_height="@dimen/_206sdp"
-                        android:layout_gravity="center_horizontal"
+                        android:layout_width="@dimen/_60sdp"
+                        android:layout_height="match_parent"
+                        android:layout_centerVertical="true"
                         android:adjustViewBounds="true"
                         android:scaleType="fitXY"
                         android:src="@drawable/test_img"
                         app:riv_corner_radius="@dimen/_5sdp" />
 
 
-                </LinearLayout>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                >
+                </RelativeLayout>
 
 
-                                <LinearLayout
+                <LinearLayout
 
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
@@ -104,7 +70,6 @@
 
 
                     <LinearLayout
-
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="5dp"
@@ -112,6 +77,17 @@
                         android:gravity="center_vertical"
                         android:orientation="vertical">
 
+                        <TextView
+                            android:id="@+id/product_nameId"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="8dp"
+                            android:layout_marginRight="8dp"
+                            android:singleLine="true"
+                            android:text="@string/bicycle"
+                            android:textColor="@color/colorBlack"
+                            android:textSize="14sp"
+                            android:textStyle="bold" />
 
                         <LinearLayout
                             android:layout_width="wrap_content"
