--- a/app/src/main/res/layout/listview_item.xml
+++ b/app/src/main/res/layout/listview_item.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_margin="10dp"
@@ -12,7 +13,8 @@
         android:layout_width="40dip"
         android:layout_height="40dip"
         android:layout_gravity="center"
-        android:src="@drawable/logo" />
+        android:src="@drawable/bye_hi_logo"
+        app:srcCompat="@drawable/bye_hi_logo" />
 
     <TextView
         android:id="@+id/tvtext_item"
