--- a/app/src/main/res/layout/fragment_donation.xml
+++ b/app/src/main/res/layout/fragment_donation.xml
@@ -69,6 +69,7 @@
             android:layout_marginLeft="12dp"
             android:layout_marginTop="30dp"
             android:layout_marginRight="12dp"
+            android:orientation="horizontal"
             app:cardBackgroundColor="@color/colorWhite"
             app:cardCornerRadius="10dp">
 
@@ -114,6 +115,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="12dp"
             android:layout_marginTop="12dp"
+            android:orientation="horizontal"
             android:layout_marginRight="12dp"
             app:cardBackgroundColor="@color/colorWhite"
             app:cardCornerRadius="10dp">
