--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -483,7 +483,7 @@
                             android:layout_gravity="center"
                             android:layout_marginTop="12dp"
                             android:gravity="center"
-                            android:text="Suscribe"
+                            android:text="Subscribe"
                             android:textColor="@color/colorBlack"
                             android:textSize="12sp" />
                     </LinearLayout>
