--- a/app/src/main/res/layout/fragment_product_category.xml
+++ b/app/src/main/res/layout/fragment_product_category.xml
@@ -266,6 +266,7 @@
 
 
             <LinearLayout
+                android:id="@+id/chat_solicitud"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="12dp"
@@ -276,6 +277,7 @@
 
 
                 <TextView
+                    android:id="@+id/chat_description"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
