se realiza  actualizacion a ultima version del app

--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -72,13 +72,12 @@
 
 
             <ImageView
-                android:layout_width="@dimen/margin_100"
+                android:layout_width="100dp"
                 android:layout_height="@dimen/margin_100"
                 android:layout_gravity="center"
                 android:adjustViewBounds="true"
                 android:scaleType="fitCenter"
-                android:src="@drawable/reset_passbg" />
-
+                android:src="@drawable/candado" />
 
             <TextView
                 android:layout_width="match_parent"
