--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -184,7 +184,8 @@
                     android:adjustViewBounds="true"
                     android:background="@drawable/rectangle"
                     android:padding="15dp"
-                    android:scaleType="fitCenter" />
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/company" />
 
 
                 <TextView
@@ -256,7 +257,8 @@
                     android:clickable="true"
                     android:onClick="changePasswordInit"
                     android:padding="15dp"
-                    android:scaleType="fitCenter" />
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/ic_padlock" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -290,7 +292,8 @@
                     android:adjustViewBounds="true"
                     android:background="@drawable/rectangle"
                     android:padding="15dp"
-                    android:scaleType="fitCenter" />
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/information" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -324,7 +327,8 @@
                     android:adjustViewBounds="true"
                     android:background="@drawable/rectangle"
                     android:padding="15dp"
-                    android:scaleType="fitCenter" />
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/bye_hi_logo" />
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -333,6 +337,38 @@
                     android:gravity="center"
                     android:padding="12dp"
                     android:text="@string/about_us"
+                    android:textColor="@color/colorBlack"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+
+
+            </LinearLayout>
+            <LinearLayout
+                android:id="@+id/tv_deletedata"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:background="@color/colorWhite"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:layout_margin="10dp"
+                    android:adjustViewBounds="true"
+                    android:background="@drawable/rectangle"
+                    android:padding="15dp"
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/information" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@color/colorWhite"
+                    android:gravity="center"
+                    android:padding="12dp"
+                    android:text="@string/delete_data"
                     android:textColor="@color/colorBlack"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -356,7 +392,8 @@
                     android:adjustViewBounds="true"
                     android:background="@drawable/rectangle"
                     android:padding="15dp"
-                    android:scaleType="fitCenter" />
+                    android:scaleType="fitCenter"
+                    app:srcCompat="@drawable/check" />
 
                 <TextView
                     android:layout_width="wrap_content"
