--- a/app/src/main/res/layout/activity_my_product_list.xml
+++ b/app/src/main/res/layout/activity_my_product_list.xml
@@ -218,7 +218,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:layout_marginLeft="12dp"
-                android:text="No Result"
+                android:text="@string/no_data"
                 android:textColor="@color/colorGray"
                 android:textSize="20sp"
                 android:textStyle="bold"
