--- a/app/src/main/res/layout/activity_update_product.xml
+++ b/app/src/main/res/layout/activity_update_product.xml
@@ -386,7 +386,7 @@
             </androidx.cardview.widget.CardView>
 
 
-            <androidx.cardview.widget.CardView
+            <!--<androidx.cardview.widget.CardView
                 android:id="@+id/tv_deletePost"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -406,7 +406,7 @@
                     android:textColor="@color/colorWhite"
                     android:textSize="@dimen/_14sdp"
                     android:textStyle="bold" />
-            </androidx.cardview.widget.CardView>
+            </androidx.cardview.widget.CardView>-->
 
 
         </LinearLayout>
