--- a/app/src/main/res/layout/fragment_donation.xml
+++ b/app/src/main/res/layout/fragment_donation.xml
@@ -93,7 +93,8 @@
                         android:layout_gravity="center"
                         android:adjustViewBounds="true"
                         android:padding="4dp"
-                        android:scaleType="fitCenter" />
+                        android:scaleType="fitCenter"
+                        app:srcCompat="@drawable/donaion" />
 
                 </androidx.cardview.widget.CardView>
 
@@ -140,7 +141,8 @@
                         android:layout_gravity="center"
                         android:adjustViewBounds="true"
                         android:padding="4dp"
-                        android:scaleType="fitCenter" />
+                        android:scaleType="fitCenter"
+                        app:srcCompat="@drawable/company" />
 
                 </androidx.cardview.widget.CardView>
 
@@ -185,7 +187,8 @@
                         android:layout_gravity="center"
                         android:adjustViewBounds="true"
                         android:padding="4dp"
-                        android:scaleType="fitCenter" />
+                        android:scaleType="fitCenter"
+                        app:srcCompat="@drawable/bye_hi_logo" />
 
                 </androidx.cardview.widget.CardView>
 
