--- a/app/src/main/res/layout/activity_product_donate.xml
+++ b/app/src/main/res/layout/activity_product_donate.xml
@@ -225,7 +225,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
-                    android:text="Is this product used?"
+                    android:text="@string/product_used"
                     android:textSize="18sp"
                     android:textStyle="bold" />
 
