--- a/app/src/main/res/layout/activity_reward_points.xml
+++ b/app/src/main/res/layout/activity_reward_points.xml
@@ -19,12 +19,14 @@
         android:src="@drawable/bg" />
 
 
-
     <ImageView
         android:id="@+id/reward_cancelId"
         android:layout_width="@dimen/margin_35"
         android:layout_height="@dimen/margin_35"
-        android:layout_margin="@dimen/margin_15"
+        android:layout_marginStart="@dimen/margin_15"
+        android:layout_marginTop="@dimen/margin_15"
+        android:layout_marginEnd="@dimen/margin_15"
+        android:layout_marginBottom="@dimen/margin_15"
         android:src="@drawable/ic_baseline_clear_24" />
 
 
@@ -100,6 +102,7 @@
 
 
                 <TextView
+                    android:id="@+id/thanks_points"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="16dp"
@@ -108,6 +111,8 @@
                     android:textColor="@color/colorBlack"
                     android:textSize="20sp"
                     android:textStyle="bold" />
+
+
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
