--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -41,7 +41,8 @@
                     android:layout_height="@dimen/margin_100"
                     android:layout_gravity="center"
                     android:src="@drawable/unnamed"
-                    app:riv_corner_radius="@dimen/_25sdp" />
+                    app:riv_corner_radius="@dimen/_25sdp"
+                    />
 
 
                 <LinearLayout
@@ -297,7 +298,7 @@
                             android:layout_width="40dp"
                             android:layout_height="40dp"
                             android:layout_gravity="center"
-                            android:src="@drawable/ic_gift" />
+                            android:src="@drawable/ic_free" />
 
 
                         <TextView
