--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -10,7 +10,7 @@
 
     <item
         android:id="@+id/chat"
-        android:icon="@drawable/chat"
+        android:icon="@drawable/chat__1_"
         android:title="@string/chat" />
     <item
         android:id="@+id/profile"
